--- a/doc/JavaScript/2.ES5重写startsWith和endsWith.md
+++ b/doc/JavaScript/2.ES5重写startsWith和endsWith.md
@@ -1,10 +1,8 @@
-[TOC]
 ## 用ES5重写startsWith和endsWith
 > 银行等企业使用浏览器内核版本不是太高，而且多为IE，导致有些ES6方法不能兼容，发现了两个ES6方法，因为很简单所以利用ES5重新实现了一下
 
 ###  1. startsWith
-~~~javascript
-```
+```javascript
 /*
 * @param searchVal 必需，要查找的字符串。
 * @param start 可选，查找的开始位置，默认为 0。
@@ -14,10 +12,8 @@ String.prototype.startsWith = function(searchVal, start) {
 	return this.substr(start, 1) === searchVal;
 }
 ```
-~~~
 ### 2. endsWith
-~~~javascript
-```
+```javascript
 /*
 * @param searchVal 必需，要查找的字符串。
 */
@@ -25,5 +21,4 @@ String.prototype.endsWith = function(searchVal) {
 	return this.substr(-1, 1) === searchVal;
 }
 ```
-~~~
 
