--- a/doc/interview/设计模式面试题-2.md
+++ b/doc/interview/设计模式面试题-2.md
@@ -1,3 +1,12 @@
+####某打车公司设计模式面试题如下：
+- 某停车场，分3层，每层100车位
+- 每个车位都能监控到车辆的驶入和离开
+- 车辆进入前，显示每层的空余车位数量
+- 车辆进入时，摄像头可识别车牌号和时间
+- 车辆出来时，出口显示器显示车牌号和停车时长
+***
+#####答案如下：
+```javascript
 // 车辆
 class Car {
     constructor(num) {
@@ -117,3 +126,4 @@ console.log(park.emptyNum());
 park.in(car3);
 console.log('第三辆车离开');
 park.out(car3);
+```
