--- a/doc/interview/设计模式面试题-1.md
+++ b/doc/interview/设计模式面试题-1.md
@@ -1,3 +1,11 @@
+####某打车公司设计模式面试题如下：
+- 打车时可以打专车或者快车，任何车都有车牌号和名称。
+- 不同车价格不同，快车每公里1元，专车每公里2元。
+- 行程开始时，显示车辆信息。
+- 行程结束时，显示打车金额（假定行程就5公里）
+***
+#####答案如下：
+```javascript
 class Car {
     constructor(name, number) {
         this.name = name;
@@ -31,3 +39,4 @@ const sCar = new SpecialCar('专车', '123456');
 const trip = new Trip(sCar);
 trip.start();
 trip.end();
+```
