增加工厂模式;

--- a/doc/design-patterns/简单工厂模式.md
+++ b/doc/design-patterns/简单工厂模式.md
@@ -109,3 +109,35 @@ function Factory(name, age, career) {
 
 这样一来需要我们做的事情就简单很多了，不用想着我拿到的数据是什么工种分配什么构造器了，也不需要增加额外的构造器了，而需要我们做的只是传参和扩展了。
 工厂模式的简单之处，在于它的概念相对好理解：**将创建对象的过程单独封装**。同时它的应用场景也非常容易识别：有构造函数的地方，我们就应该想到简单工厂；在写了大量构造函数、调用了大量的 new，自觉非常不爽的情况下，我们就应该思考是不是可以使用工厂模式重构代码了。
+
+**源码中的简单工厂模式**
+- vue-router 源码中的简单工厂模式
+
+代码位置：[vue-router/src/index.js](https://github.com/vuejs/vue-router/blob/v3.0.6/src/index.js)
+
+```javascript
+// src/index.js
+export default class VueRouter {
+    constructor(options) {
+        this.mode = mode // 路由模式
+        
+        switch (mode) { // 简单工厂
+            case 'history': // history 方式
+                this.history = new HTML5History(this, options.base)
+                break
+            case 'hash': // hash 方式
+                this.history = new HashHistory(this, options.base, this.fallback)
+                break
+            case 'abstract': // abstract 方式 代表非浏览器环境中路由方式
+                this.history = new AbstractHistory(this, options.base)
+                break
+            default:
+                // ... 初始化失败报错
+        }
+    }
+}
+```
+源码里没有把工厂方法的产品创建流程封装出来，而是直接将产品实例的创建流程暴露在 VueRouter 的构造函数中，在被 new 的时候创建对应产品实例，相当于 VueRouter 的构造函数就是一个工厂方法。
+
+如果一个系统不是 SPA （Single Page Application，单页应用），而是是 MPA（Multi Page Application，多页应用），那么就需要创建多个 VueRouter 的实例，此时 VueRouter 的构造函数也就是工厂方法将会被多次执行，以分别获得不同实例。
+
