--- a/doc/design-patterns/原型模式.md
+++ b/doc/design-patterns/原型模式.md
@@ -1,2 +1,21 @@
+> 对于使用过基于类的语言 (如 Java 或 C++) 的开发人员来说，JavaScript 有点令人困惑，因为它是动态的，并且本身不提供一个 class 实现。（在 ES2015/ES6 中引入了 class 关键字，但那只是语法糖，JavaScript 仍然是基于原型的）。——MDN
 
+当谈到继承时，JavaScript 只有一种结构：对象。每个实例对象（ object ）都有一个私有属性（称之为 \_\_proto\_\_）指向它的构造函数的原型对象（prototype ）。该原型对象也有一个自己的原型对象( \_\_proto\_\_ ) ，层层向上直到一个对象的原型对象为 null。根据定义，null 没有原型，并作为这个原型链中的最后一个环节。
 
+几乎所有 JavaScript 中的对象都是位于原型链顶端的 Object 的实例。
+
+尽管这种原型继承通常被认为是 JavaScript 的弱点之一，但是原型继承模型本身实际上比经典模型更强大。
+
+### 基于原型链的继承
+
+JavaScript 对象有一个指向一个原型对象的链。当试图访问一个对象的属性时，它不仅仅在该对象上搜寻，还会搜寻该对象的原型，以及该对象的原型的原型，依次层层向上搜索，直到找到一个名字匹配的属性或到达原型链的末尾。
+
+### 原型模式
+
+谈原型模式，其实是谈原型范式。原型编程范式的核心思想就是利用实例来描述对象，用实例作为定义对象和继承的基础。在 JavaScript 中，原型编程范式的体现就是基于原型链的继承。
+
+关于继承的实现请移步：
+
+- https://juejin.im/post/5ea6f3746fb9a043691cf8f4
+- https://segmentfault.com/a/1190000022490882
+- https://fullstacker37.github.io/doc/JavaScript/3.%E7%BB%A7%E6%89%BF.html
